show progress while conversion form is submitted

--- a/client/views/conversionBox/conversionBox.html
+++ b/client/views/conversionBox/conversionBox.html
@@ -13,7 +13,7 @@
 						  Fordern Sie weitere Informationen an!
 					  </h4>
 				  </div>
-				  <form class="conversionbox-inner">  		
+				  <form class="conversionbox-inner conversionbox-form">  		
 					  <div class="portrait-mark portrait-mark-form">
 						  <img src="/img/mark.jpg" alt="Portrait Mark Reich" class="portrait">
 						  <br>
@@ -147,4 +147,6 @@
     	</div>
     </div>
   </div>
+
+{{invokeAfterLoad}}  
 </template>
