--- a/sphere.styl
+++ b/sphere.styl
@@ -1398,6 +1398,10 @@ overlay-duration-firefox = 0.2s
     padding-left 2px
     margin-top line
     margin-bottom line
+    
+    .conversionbox-spinner
+      top 13px
+      left 15px
 
   .call-back-image
     background url("img/homepage/telButton.png") no-repeat 0% 50%
