--- a/sphere.styl
+++ b/sphere.styl
@@ -1236,7 +1236,7 @@ overlay-duration = 0.2
   top 0px
   left 0px
   width 100%
-  margin-top -800px
+  margin-top -850px
   z-index 101
   opacity 0
   transition-without-firefox all unit(overlay-duration, 's')
@@ -1308,6 +1308,12 @@ overlay-duration = 0.2
 .conversionbox-inner
   margin-left (column + gutter) px
   margin-right (column + gutter) px
+  
+  .variable-content-invisible
+    display none
+  
+  .innovation-partner
+    text-align justify
   
   .telephone
     padding-top line
