--- a/client/views/conversionBox/conversionBox.html
+++ b/client/views/conversionBox/conversionBox.html
@@ -9,27 +9,19 @@
 					  <img src="/img/close.png" alt="Close-Button" class="close">
 				  </a>
 				  <div class="whitebg conversion-header">
-					  <h4 class="headline-conversionbox info-icon">
-						  Fordern Sie weitere Informationen an!
+					  <h4 class="headline-conversionbox info-icon variablecontent-headline">
+						  &nbsp;v
 					  </h4>
 				  </div>
 				  <form class="conversionbox-inner conversionbox-form">  		
-					  <div class="portrait-mark portrait-mark-form">
-						  <img src="/img/mark.jpg" alt="Portrait Mark Reich" class="portrait">
-						  <br>
-						  Mark Reich, Gr&uuml;nder
-					  </div>
-					  <div class="telephone">
-						  <p class="line1">
-							  Rufen Sie uns an
-						  </p>				
-						  <p class="telNo">
-							  030 609 8448 - 11		
-						  </p>		
-						  <p class="line3">
-							  Wir freuen uns auf Sie!
-						  </p>				
-					  </div>
+				    
+				    <div class="telephone-box">
+				      {{> conversionBoxTelephone}}
+				    </div>
+				    <div class="innovation-partner-box">
+				      {{> conversionBoxInnovation}}
+				    </div>
+					  
 					  <h4>
 						  Oder hinterlassen Sie Ihre Kontaktdaten und erhalten Sie unsere Firmenpr&auml;sentation per E-Mail.
 					  </h4>
