finished several minor bugherd tasks

--- a/client/views/conversionBox/conversionBox.html
+++ b/client/views/conversionBox/conversionBox.html
@@ -107,7 +107,7 @@
             <h2>
               Vielen Dank f&uuml;r ihre Anfrage!
             </h2>
-            Ihre Nachricht ist bei uns eingegangen. Wir werden uns schnellstm&ouml;glich bei Ihnen melden.
+            Ihre Nachricht ist bei uns eingegangen. Wir werden Ihre Anfrage umgehend bearbeiten.
 					  <div class="portrait-mark portrait-mark-thankyou">
 						  <img src="/img/mark.jpg" alt="Portrait Mark Reich" class="portrait">
 						  <br>
