--- a/client/views/homepage/homepage.html
+++ b/client/views/homepage/homepage.html
@@ -66,7 +66,7 @@
 				<p class="function-description">
   				Verwenden Sie aktuelle Firmeninformationen in ihrem CRM-System und reagieren Sie schneller auf das Kundenverhalten.
 				</p>
-				<a href="/tour/deal-slide/">mehr Informationen</a>
+				<a href="/tour/export-slide/">mehr Informationen</a>
 			</li>
 		</ul>
   </div>
