--- a/client/views/tour/tour.html
+++ b/client/views/tour/tour.html
@@ -8,28 +8,28 @@
 						&nbsp;
 						<li class="firstSlider">
 						  	<img src="/img/tour/marker.png" alt="Marker" class="marker">
-						  	Kundenansprache verbessern
+						  	1.&nbsp; Kundenansprache verbessern
 						</li>
 					</a>
 					&nbsp;
 					<a href="#" class="tour-slider filter-slide">
 						&nbsp;
 						<li>
-				  		Abschlussquoten erh&ouml;hen
+				  		2.&nbsp; Abschlussquoten erh&ouml;hen
 						</li>
 					</a>
 					&nbsp;
 					<a href="#" class="tour-slider export-slide">
 						&nbsp;
 						<li>
-					  	CRM aufwerten
+					  	3.&nbsp; CRM aufwerten
 						</li>
 					</a>
 					&nbsp;
 					<a href="#" class="tour-slider deal-slide">
 						&nbsp;
 						<li class="lastSlider">
-							Gutschein-Daten
+							4.&nbsp; Gutschein-Daten
 							<span class="special">
 								SPECIAL
 							</span>
@@ -124,7 +124,7 @@
 	  <div class="tour-page grid-wrapper export-slide">
 		  <div class="description-box">
 			  <h2>
-				  Aktuelle Firmeninformationen in eigenes CRM übernehmen
+				  Aktuelle Firmendaten in Ihrem CRM-System
 			  </h2>
 			  <p>
 				  Importieren Sie unsere Daten direkt in Ihr eigenes CRM und beginnen Sie mit der Kundenansprache. 
@@ -190,9 +190,9 @@
 			  </a>
 		  </div>
 		  <div class="screen-box">
-			  <img src="/img/tour/deal-screen.png" alt="Gutschein-Daten als Exceldatei exportiert">
+			  <img src="/img/tour/deal-screen.png" alt="Gutschein-Daten als Exceldatei">
 			  <p>
-				  Gutschein-Daten als Exceldatei exportiert
+				  Gutschein-Daten als Exceldatei
 			  </p>
 		  </div>
 	  </div>
