--- a/sphere.styl
+++ b/sphere.styl
@@ -1202,10 +1202,10 @@ myGray4 = #cacbcc
     background-image url('/img/homepage/button.png')
     
     &:hover
-      background-position 0 -58px
+      background-position 0 -57px
         
     &:active
-      background-position 0 -116px
+      background-position 0 -114px
         
 
 overlay-duration = 0.2
@@ -1409,7 +1409,7 @@ overlay-duration = 0.2
       left 15px
 
   .call-back-image
-    background url("img/homepage/telButton.png") no-repeat 0% 50%
+    background url("img/homepage/tick-small.png") no-repeat 0% 50%
     padding-left 10px
 
   .conversionbox-info-image
@@ -1435,7 +1435,7 @@ overlay-duration = 0.2
   
   li
     display inline-block
-    pad = 36 px
+    pad = 25 px
     padding-right pad
     padding-left pad
   
@@ -1546,7 +1546,7 @@ slideAbstand = 300
       padding-bottom line * 1.5
       padding-top line * 0.5
       
-    verticalFix = 3px
+    verticalFix = 0px
     ul
       margin-top - verticalFix
       margin-left -10px
@@ -1652,7 +1652,7 @@ slideAbstand = 300
   width 91px
   height 142px
   position absolute
-  top 361px
+  top 363px
   right 80px
 
   &:hover
