finished more bugherd tasks

--- a/client/views/tour/tour.html
+++ b/client/views/tour/tour.html
@@ -81,7 +81,7 @@
 		  <div class="screen-box">
 			  <img src="/img/tour/profile-screen.png" alt="Ausschnitt aus unseren Firmenprofilen">
 			  <p>
-				  Abschlussquoten erh&ouml;hen
+				  Ausführliche Firmenprofile
 			  </p>
 		  </div>
 	  </div>
