finished even more bugherd tasks

--- a/client/views/conversionBox/conversionBoxTelephone.html
+++ b/client/views/conversionBox/conversionBoxTelephone.html
@@ -15,4 +15,7 @@
 	    Wir freuen uns auf Sie!
     </p>				
   </div>
+  <h4>
+	  Oder hinterlassen Sie Ihre Kontaktdaten und erhalten Sie unsere Firmenpr&auml;sentation per E-Mail.
+  </h4>
 </template>
