--- a/client/views/conversionBox/conversionBoxInnovation.html
+++ b/client/views/conversionBox/conversionBoxInnovation.html
@@ -2,4 +2,7 @@
   <p class="innovation-partner">
     Als Innovationspartner sichern Sie sich Zugang zu unseren Firmeninformationen noch vor Ihren Wettbewerbern. Sie erhalten von uns eine intensive Betreuung und beeinflussen mit Ihrem Feedback die Entwicklung unseres Produktes – natürlich zu Sonderkonditionen.
   </p>
+  <h4>
+	  Hinterlassen Sie Ihre Kontaktdaten und erhalten Sie weitere Informationen.
+  </h4>
 </template>
