shy-elements in the tour

--- a/client/views/tour/tour.html
+++ b/client/views/tour/tour.html
@@ -67,7 +67,7 @@
 				  Mehr Kundenwissen ohne zus&auml;tzlichen Aufwand
 			  </h2>
 			  <p>
-				  Erfahren Sie mit einem Klick alles über Ihre Kunden. Unsere Firmenprofile enthalten s&auml;mtliche Informationen die Sie im Vertrieb benötigen. Verbringen Sie weniger Zeit mit Informationsbeschaffung und mehr Zeit beim Kunden.
+				  Erfahren Sie mit einem Klick alles über Ihre Kunden. Un&shy;se&shy;re Firmenprofile enthalten s&auml;mtliche Information&shy;en die Sie im Vertrieb benötigen. Verbringen Sie we&shy;ni&shy;ger Zeit mit Informationsbeschaffung und mehr Zeit beim Kunden.
 			  </p>
 			  <ul>
 				  <li>
@@ -102,7 +102,7 @@
 				  Zielgruppen eingrenzen und Abschlussquoten erh&ouml;hen
 			  </h2>
 			  <p>
-				  Sprechen Sie nur die Unternehmen an die den gr&ouml;&szlig;ten Bedarf an Ihrem Produkt haben. Grenzen Sie Ihre Zielgruppe mit zahlreichen Filterm&ouml;glichkeiten pr&auml;zise ein:
+				  Sprechen Sie nur die Unternehmen an die den gr&ouml;&szlig;&shy;ten Bedarf an Ihrem Produkt haben. Grenzen Sie Ihre Ziel&shy;gruppe mit zahlreichen Filterm&ouml;glichkeiten pr&auml;zise ein:
 			  </p>
 			  <ul>
 				  <li>
